--- a/app/src/main/res/layout/activity_new_ui_survey_screen.xml
+++ b/app/src/main/res/layout/activity_new_ui_survey_screen.xml
@@ -44,7 +44,7 @@
 
 
     <Spinner
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="20dp"
         android:id="@+id/spinnerGov"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -57,13 +57,13 @@
         android:id="@+id/spinnerCities"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="400dp"
+        android:layout_marginRight="420dp"
         android:layout_marginBottom="8dp"
         />
 
 
     <ImageView
-        android:layout_marginRight="650dp"
+        android:layout_marginRight="670dp"
         android:id="@+id/imageView_add_new_city"
         android:layout_width="70dp"
         android:layout_height="80dp"
@@ -74,7 +74,7 @@
 
     <Spinner
         android:id="@+id/spinnerDistrict"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="20dp"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -86,14 +86,14 @@
         android:layout_width="70dp"
         android:layout_height="80dp"
         android:layout_marginTop="80dp"
-        android:layout_marginRight="300dp"
+        android:layout_marginRight="320dp"
 
         app:srcCompat="@drawable/ic_plusicon" />
 
 
     <Spinner
         android:id="@+id/spinnerOffices"
-        android:layout_marginRight="400dp"
+        android:layout_marginRight="420dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -102,6 +102,7 @@
 
 
     <EditText
+        android:layout_marginRight="20dp"
         android:id="@+id/edit_address"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -117,7 +118,7 @@
         android:id="@+id/edit_mobile"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="400dp"
+        android:layout_marginStart="420dp"
         android:layout_marginTop="180dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
@@ -141,6 +142,7 @@
     <TextView
 
 
+        android:layout_marginRight="20dp"
         android:textColor="@color/colorPrimaryText"
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
@@ -159,6 +161,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="335dp"
 
+        android:layout_marginRight="35dp"
         android:background="@drawable/white_toggle"
         android:gravity="center"
         android:text="مالك"
@@ -168,7 +171,7 @@
 
     <TextView
 
-        android:layout_marginRight="110dp"
+        android:layout_marginRight="145dp"
         android:textColor="@color/colorWhite"
         android:id="@+id/text_rental"
         android:layout_width="wrap_content"
@@ -185,7 +188,7 @@
     <TextView
 
 
-        android:layout_marginRight="400dp"
+        android:layout_marginRight="420dp"
         android:textColor="@color/colorPrimaryText"
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
@@ -204,7 +207,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="335dp"
 
-        android:layout_marginRight="420dp"
+        android:layout_marginRight="455dp"
         android:background="@drawable/white_toggle"
         android:gravity="center"
         android:text="نعم"
@@ -213,7 +216,7 @@
         />
 
     <TextView
-        android:layout_marginRight="529dp"
+        android:layout_marginRight="564dp"
         android:textColor="@color/colorWhite"
         android:id="@+id/text_inside_net_no"
         android:layout_width="wrap_content"
@@ -229,6 +232,7 @@
     <TextView
 
 
+        android:layout_marginRight="20dp"
         android:textColor="@color/colorPrimaryText"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
@@ -240,6 +244,8 @@
         />
 
     <TextView
+        android:layout_marginRight="35dp"
+
         android:textColor="@color/colorPrimaryText"
         android:id="@+id/text_internet_yes"
         android:layout_width="wrap_content"
@@ -255,7 +261,7 @@
         />
 
     <TextView
-        android:layout_marginRight="100dp"
+        android:layout_marginRight="135dp"
         android:textColor="@color/colorWhite"
         android:id="@+id/text_internet_no"
         android:layout_width="wrap_content"
@@ -274,7 +280,7 @@
 
         android:drawablePadding="15dp"
         android:drawableRight="@drawable/ic_wifiicon"
-        android:layout_marginRight="400dp"
+        android:layout_marginRight="420dp"
         android:id="@+id/edit_internet_speed"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -296,6 +302,7 @@
 
     <TextView
 
+        android:layout_marginRight="20dp"
 
         android:textColor="@color/colorPrimaryText"
         android:id="@+id/textView33"
@@ -310,6 +317,7 @@
 
 
     <TextView
+        android:layout_marginRight="35dp"
         android:textColor="@color/colorPrimaryText"
         android:id="@+id/text_morning_shift"
         android:layout_width="wrap_content"
@@ -324,7 +332,7 @@
 
     <TextView
 
-        android:layout_marginRight="62dp"
+        android:layout_marginRight="98dp"
         android:textColor="@color/colorPrimaryText"
         android:id="@+id/textView66"
         android:layout_width="wrap_content"
@@ -376,7 +384,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="680dp"
-        android:layout_marginRight="525dp"
+        android:layout_marginRight="500dp"
 
         android:background="@drawable/sun_non"
         android:gravity="center"
@@ -386,7 +394,7 @@
 
     <TextView
 
-        android:layout_marginRight="585dp"
+        android:layout_marginRight="560dp"
         android:textColor="@color/colorPrimaryText"
         android:id="@+id/textView663"
         android:layout_width="wrap_content"
@@ -399,8 +407,27 @@
         android:textSize="22dp"
         />
 
-    <LinearLayout
+
+    <EditText
+        android:editable="false"
+        android:focusableInTouchMode="false"
+        android:id="@+id/edit_from"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="770dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:editable="false"
+        android:focusableInTouchMode="false"
+        android:id="@+id/edit_to"
+        android:layout_marginRight="400dp"
+        android:layout_marginTop="770dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_marginTop="830dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="1.5dp"
@@ -411,7 +438,7 @@
 
     <TextView
 
-        android:layout_marginTop="790dp"
+        android:layout_marginTop="870dp"
         android:textColor="@color/colorPrimaryText"
         android:id="@+id/textView334"
         android:layout_width="wrap_content"
@@ -424,7 +451,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_marginRight="10dp"
-            android:layout_marginTop="850dp"
+            android:layout_marginTop="920dp"
             android:layout_width="350dp"
             android:layout_height="wrap_content">
 
@@ -438,7 +465,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_marginRight="400dp"
-        android:layout_marginTop="850dp"
+        android:layout_marginTop="920dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content">
 
@@ -453,7 +480,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_marginRight="10dp"
-        android:layout_marginTop="950dp"
+        android:layout_marginTop="1000dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content">
 
@@ -467,7 +494,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_marginRight="400dp"
-        android:layout_marginTop="950dp"
+        android:layout_marginTop="1000dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content">
 
@@ -482,7 +509,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_marginRight="10dp"
-        android:layout_marginTop="1050dp"
+        android:layout_marginTop="1100dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content">
 
@@ -496,7 +523,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_marginRight="400dp"
-        android:layout_marginTop="1050dp"
+        android:layout_marginTop="1100dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content">
 
